--- a/index.html
+++ b/index.html
@@ -592,7 +592,7 @@
         const totalHearts = 3;
 
         // Items to hide things in
-        const hidingItems = ['🎁', '🎁', '🎁', '🧸', '🧸', '💐', '💐', '☁️', '💌', '🍬', '🧁', '🌹'];
+        const hidingItems = ['🎁', '🎁', '🎁', '🧸', '🧸', '😽', '😻', '👩‍❤️‍💋‍👨', '💌', '💖', '🦔', '🌹'];
         let spots = [];
 
         window.onload = function () {
@@ -714,3 +714,4 @@
 </body>
 
 </html>
+
