--- a/index.html
+++ b/index.html
@@ -592,7 +592,7 @@
         const totalHearts = 3;
 
         // Items to hide things in
-        const hidingItems = ['🎁', '🎁', '🎁', '🧸', '🦔', '😽', '😻', '👩‍❤️‍💋‍👨', '💌', '💖', '🦔', '🌹'];
+        const hidingItems = ['💘', '❤️‍🔥', '💌', '🧸', '🦔', '😽', '😻', '👩‍❤️‍💋‍👨', '💌', '💖', '🦔', '🌹'];
         let spots = [];
 
         window.onload = function () {
@@ -714,5 +714,6 @@
 </body>
 
 </html>
+
 
 
