--- a/index.html
+++ b/index.html
@@ -460,12 +460,13 @@
     <div id="letter-view">
         <div class="love-letter">
             <button class="close-btn" onclick="closeLetter()">×</button>
-            <h2>My Dearest Valentine,</h2>
-            <p>Just like you found these hidden hearts, you've found the deepest parts of my soul.</p>
-            <p>Every moment with you is a surprise I cherish, a gift I never want to stop opening.</p>
-            <p>Thank you for being my adventure, my comfort, and my love.</p>
-            <p>Happy Valentine's Day! ❤️</p>
-            <p style="text-align: right;">- Yours forever</p>
+            <h2>Mi amorzinho gatito,>
+            <p>From the moment I met you,</p>
+            <p>your voice has filled me with joy,</p>
+            <p>and your love with warmth. </p>
+            <p>I love you more than the world.</p>
+            <p> Happy birthday, my everything. </p>
+            <p style="text-align: right;">- Tu gatita</p>
         </div>
     </div>
 
@@ -714,6 +715,7 @@
 </body>
 
 </html>
+
 
 
 
